# HiHolo

./: .gitignore  CMakeLists.txt  Error.h  ProjectionSolver.cpp  ProjectionSolver.h  Projector.cu  Projector.h  Propagator.cu  Propagator.h  README.md  WaveField.cu  WaveField.h  cuda_utils.cu  cuda_utils.h  datatypes.h  holo_recons.cu  holo_recons.h  imageio_utils.cpp  imageio_utils.h  math_utils.cpp  math_utils.h  testCUFFT  testCUFFT.cu
examples/: CMakeLists.txt  Makefile  argRecons.cpp  arg_holo_reg.cpp  arg_prepro_angles.cpp  arg_recons_ctf.cpp  arg_recons_ctf_angles.cpp  arg_recons_interval.cpp  arg_recons_ite_angles.cpp  arg_recons_iter.cpp  arg_recons_pipeline.cpp  recons_pirp.cpp
examples/makeFiles/: Makefile_prop
include/: IRPSolver.h  ProjectionSolver.h  Projector.h  WaveField.h  cuda_utils.h  holo_recons.h  image_utils.h  imageio_utils.h
python/: CMakeLists.txt  mytools.py  test_calibr.py  test_ctf.py  test_iter.py  test_multi_process.py  test_multi_recon.py  test_prepro.py  test_prepro_ctf.py  test_prepro_iter.py  test_preprocess.py  test_process.py
python/bindings/: pybind_wrapper.cpp
python/tests/: convert_mat.py  gen_data_dis.py  test_ctf.py  test_iter.py  test_registration.py
src/: IRPSolver.cu  ProjectionSolver.cpp  Projector.cu  Propagator.cu  WaveField.cu  cuda_utils.cu  holo_recons.cu  image_utils.cpp  imageio_utils.cpp
tests/: CMakeLists.txt  copy_holos  copy_holos.cpp  test_sitk.cpp
